# farabi

./: .env  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
conda/: meta.yaml  setup.py
farabio/: Dockerfile  datasets.py  requirements.txt
farabio/datasets/: __init__.py  utils.py
tests/: datasets.py  requirements_dev.txt  requirements_docs.txt  test_docker_compose.sh  test_docker_hub.sh  test_farabio_docker.sh  test_pypi.sh  test_source.sh
