[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "farabio"
version = "2.0.0"
dynamic = ["dependencies"]
requires-python = ">=3.8"
authors = [
  {name = "Sanzhar Askaruly", email = "s.askaruly@gmail.com"},
]
maintainers = [
  {name = "Sanzhar Askaruly", email = "s.askaruly@gmail.com"}
]
description = "Python toolkit for AI-based biomedical image analysis"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["python", "deep learning", "pytorch", "datasets", "models"]
classifiers = [
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/tuttelikz/farabio"
Documentation = "https://farabio.readthedocs.io/en/latest/"
Issues = "https://github.com/tuttelikz/farabio/issues"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["farabio/requirements.txt"]